--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,15 @@
             "email": "andy@thefragens.com",
             "homepage": "https://thefragens.com",
             "role": "Developer"
+        },
+        {
+            "name": "Peter Westwood",
+            "homepage": "https://blog.ftwr.co.uk/",
+            "role": "Developer"
+        },
+        {
+            "name": "Maura Teal",
+            "role": "Developer"
         }
     ],
     "repositories": [
