add Maura's github link

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         },
         {
             "name": "Maura Teal",
+            "homepage": "https://github.com/mlteal",
             "role": "Developer"
         }
     ],
